# glslang-sys

./: .gitignore  Cargo.toml  README.md  known_good.json
.github/workflows/: rust_ci.yml
prebuilt/: version.txt
prebuilt/aarch64-linux-android/lib/cmake/: glslang-default-resource-limitsTargets.cmake  glslangValidatorTargets.cmake  glslangtestsTargets.cmake
prebuilt/x86_64-pc-windows-msvc/lib/: GenericCodeGen.lib  HLSL.lib  OGLCompiler.lib  OSDependent.lib  SPIRV.lib  glslang-default-resource-limits.lib  glslang.lib
src/: build.rs  lib.rs  wrapper.h
