[package]
name = "glslang-sys-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "src/build.rs"

[dependencies]
thiserror = "1.0"

[build-dependencies]
env_logger = "0.9"
log = "0.4"
thiserror = "1.0"
scopeguard = "1.1"
bindgen = { git = "https://github.com/rust-lang/rust-bindgen", branch = "master", version = "0.59" } # `allowlist_file` seems to be missing in the version on crates.io

[target.'cfg(target_os = "windows")'.build-dependencies]
kernel32-sys = "0.2"

[features]
build = []
