[package]
name = "glslang-sys-2022"
authors = ["https://github.com/James2022-rgb"]
license = "MIT"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "src/build.rs"

[dependencies]
thiserror = "1.0"
bitflags = "1.3"
scopeguard = "1.1"

[build-dependencies]
env_logger = "0.9"
log = "0.4"
thiserror = "1.0"
scopeguard = "1.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0"
bindgen = "0.60.1"

[target.'cfg(target_os = "windows")'.build-dependencies]
kernel32-sys = "0.2"

[features]
build-from-source = []
